--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
   
   <title> NFT preview card component</title>
 
@@ -18,9 +18,9 @@
     <div class="card">
 <div class="header">
   
-        <img class = "equi-img" src="/images/image-equilibrium.jpg" alt="image-equilibrium" >
+        <img class = "equi-img" src="images/image-equilibrium.jpg" alt="image-equilibrium" >
         <div class="overlay"></div>
-        <img src="/images/icon-view.svg" alt="eye-icon" class="eye-icon">
+        <img src="images/icon-view.svg" alt="eye-icon" class="eye-icon">
 </div>
 <div class="header-title">
   
@@ -30,19 +30,19 @@
 
       <div class="eth-time">
         <div class="eth">
-          <img class = "eth-img"src="/images/icon-ethereum.svg" alt="eth-img">
+          <img class = "eth-img"src="images/icon-ethereum.svg" alt="eth-img">
           <p class="eth-price">0.041 ETH</p>
 
         </div>
 
         <div class="time-remained">
-          <img src="/images/icon-clock.svg" alt="clock-img" class="clock-img">
+          <img src="images/icon-clock.svg" alt="clock-img" class="clock-img">
           <p class="days-left">0.041 ETH</p>
         </div>
       </div>
      <hr>
       <div class="creation-of">
-        <img src="/images/image-avatar.png" alt="creator-img" class="creator-img">
+        <img src="images/image-avatar.png" alt="creator-img" class="creator-img">
         <p class="creator-name">Creation of <a href = "" class="name">Jules Wyvern</a></p>
       </div>
 
